--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "sequelize": "^6.37.2",
     "sqlite3": "^5.1.7"
   },
   "engines": {
     "node": ">=14"
-  },
-  "devDependencies": {}
+  }
 }
