--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "express-ejs-layouts": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "sequelize": "^6.37.2",
     "sqlite3": "^5.1.7"
   },
